--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
               <a href="...">Resume</a></div>
           <div class="images">
               <a href="..."></a>
-              <img src="Images/Linkedin.png"></img>
+              <img src="images/linkedin.png"></img>
               <a href="..."></a>
-              <img src="Images/behance.png"></img>
+              <img src="images/behance.png"></img>
               <a href="..."></a>
-              <img src="Images/email.png"></img>
+              <img src="images/email.png"></img>
               
           </div>
-          <img src="Images/copyright.png"></img>
+          <img src="images/copyright.png"></img>
           </div>
       <div class="logo">
               <img src="images/logo.png"></img>
